--- a/src/css/container.css
+++ b/src/css/container.css
@@ -16,17 +16,44 @@
     border: 6px solid white;
 }
 
-.container-title {
-    font-size: 1rem;
+h2 {
+    font-size: var(--max-fs);
+    font-weight: 700;
 }
 
-.container-title::after {
+h3, .container-name-age h2::after {
+    opacity: 0.6;
+    font-weight: 400;
+
+}
+
+.container-name-age h2::after {
     content: "26";
     margin-left: 0.5625rem;
-    opacity: 0.4;
 }
 
-/* 185px
-    90px
-    90px
-*/
+.container-social-information {
+    display: grid;
+    border-top: 1px solid #e7e7e7;
+    width: 100%;
+    grid-template: repeat(2,1fr) / repeat(3,1fr);
+    justify-items: center;
+    align-items: center;
+}
+
+.container-social-information h2 {
+    margin: 0;
+}
+
+h2:nth-last-child(1) {
+    grid-area: 1 / 1 / 2 / 2 ;
+    align-self: flex-end;
+}
+h2:nth-last-child(2) {
+    grid-area: 1 / 2 / 2 / 3 ;
+}
+h2:nth-last-child(4) {
+    grid-area: 1 / 3 / 2 / 4 ;
+}
+
+h3:nth-last-child()
