--- a/src/css/container.css
+++ b/src/css/container.css
@@ -1,7 +1,7 @@
 .container {
     width:21.875rem ;
     height:23.4375rem ;
-    background: url('../assets/images/bg-pattern-card.svg') top center no-repeat, red;
+    background: url('../assets/images/bg-pattern-card.svg') top center no-repeat, white;
     border-radius: 5%;
     display: grid;
     justify-items: center;
@@ -38,10 +38,10 @@ h3, .container-name-age h2::after {
     width: 100%;
     grid-template: repeat(2,1fr) / repeat(3,1fr);
     justify-items: center;
-    align-items: center;
+    align-items: flex-end;
 }
 
-.container-social-information h2 {
+.container-social-information h2, .container-social-information h3 {
     margin: 0;
 }
 
@@ -56,4 +56,12 @@ h2:nth-last-child(4) {
     grid-area: 1 / 3 / 2 / 4 ;
 }
 
-h3:nth-last-child()
+h3:nth-last-child(1) {
+align-self: flex-start;
+}
+h3:nth-last-child(3) {
+align-self: flex-start;
+}
+h3:nth-last-child(5) {
+align-self: flex-start;
+}
