--- a/src/css/container.css
+++ b/src/css/container.css
@@ -36,32 +36,41 @@ h3, .container-name-age h2::after {
     display: grid;
     border-top: 1px solid #e7e7e7;
     width: 100%;
-    grid-template: repeat(2,1fr) / repeat(3,1fr);
+    grid-template: repeat(2,1fr) / 40px repeat(3,1fr) 40px;
     justify-items: center;
     align-items: flex-end;
 }
 
 .container-social-information h2, .container-social-information h3 {
     margin: 0;
+    padding: 2px;
 }
 
-h2:nth-last-child(1) {
-    grid-area: 1 / 1 / 2 / 2 ;
-    align-self: flex-end;
-}
-h2:nth-last-child(2) {
+[class*=social] h2:nth-last-child(6) {
     grid-area: 1 / 2 / 2 / 3 ;
+    color: yellowgreen;
 }
-h2:nth-last-child(4) {
-    grid-area: 1 / 3 / 2 / 4 ;
+[class*=social] h2:nth-last-child(4) {
+    color: blue;
+    grid-column: 3 /4 ;
+    grid-row: 1 / 2;
 }
-
+[class*=social] h2:nth-last-child(2) {
+    color: red;
+    grid-area: 1 / 4 / 2 / 5 ;
+}
 h3:nth-last-child(1) {
+    grid-area: 2 / 4/ 3 /5;
 align-self: flex-start;
+/* color: rgb(16, 64, 119); */
 }
 h3:nth-last-child(3) {
+    grid-area: 2 / 3/ 3 /4;
 align-self: flex-start;
+/* color: chartreuse; */
 }
 h3:nth-last-child(5) {
+    grid-area: 2 / 2/ 3 /3;
 align-self: flex-start;
+/* color: chocolate; */
 }
