--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,13 +9,19 @@
 body {
     font-size: 11px;
     text-align: center;
-    margin: 0;
-    height: 100vh; 
+    margin: 0 auto;
+    height: 100vh;
+    max-height: 720px;
     width: 100vw;
+    max-width: 1440px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #19a1ad;
-    background-size: cover;
+    /* background-color: #19a1ad right; */
+    background: 
+    url('../assets/images/bg-pattern-bottom.svg') no-repeat fixed,
+    url('../assets/images/bg-pattern-top.svg') no-repeat fixed, #19a1ad;
+    background-position: 43.75rem 370px, -300px -500px;
+    ;
     font-family: 'Kumbh Sans', sans-serif;
 }
