--- a/src/css/container.css
+++ b/src/css/container.css
@@ -25,7 +25,6 @@ h2 {
 h3, .container-name-age h2::after {
     opacity: 0.6;
     font-weight: 400;
-
 }
 
 .container-name-age h2::after {
@@ -49,40 +48,60 @@ h3, .container-name-age h2::after {
 
 [class*=social] h2:nth-last-child(6) {
     grid-area: 1 / 2 / 2 / 3 ;
-    color: yellowgreen;
+    /* color: yellowgreen; */
 }
 [class*=social] h2:nth-last-child(4) {
-    color: blue;
+    /* color: blue; */
     grid-column: 3 /4 ;
     grid-row: 1 / 2;
 }
 [class*=social] h2:nth-last-child(2) {
-    color: red;
+    /* color: red; */
     grid-area: 1 / 4 / 2 / 5 ;
 }
 h3:nth-last-child(1) {
     grid-area: 2 / 4/ 3 /5;
-align-self: flex-start;
-/* color: rgb(16, 64, 119); */
+    align-self: flex-start;
 }
 h3:nth-last-child(3) {
     grid-area: 2 / 3/ 3 /4;
-align-self: flex-start;
-/* color: chartreuse; */
+    align-self: flex-start;
 }
 h3:nth-last-child(5) {
-    grid-area: 2 / 2/ 3 /3;
-align-self: flex-start;
-/* color: chocolate; */
+    grid-area: 2 / 2 / 3 /3;
+    align-self: flex-start;
 }
 
-[class*="bg-"] {
+[class="bg"] {
     position: absolute;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+.bg-top {
+    position: absolute;
+    bottom: 43%;
+    right: 50%;
 }
 
 .bg-bottom{
-    display: inline-block;
-    max-width: 100%;
-    bottom: -80%;
-    right:-25%;
+    position: absolute;
+    top: 50%;
+    left: 45%;
+}
+
+@media screen and (max-width:360px){
+
+    .container-social-information {
+        grid-template: repeat(2,1fr) / 10px repeat(3,1fr) 10px;
+    }
+
+    .bg-top {
+    bottom: 40%;
+    }
+
+    .bg-bottom{
+        top:45%;
+    }
 }
