--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,15 +9,21 @@
 body {
     font-size: 11px;
     text-align: center;
+    width: 94vw;
+    height: 100vh;
     margin: 0 auto;
-    /* height: 100vh; */
-    height: 720px;
-    /* width: 100vw; */
-    max-width: 1440px;
+    background:  #19a1ad;
+    font-family: 'Kumbh Sans', sans-serif;   
     display: flex;
     align-items: center;
     justify-content: center;
-    background:  #19a1ad;
-    background-clip: padding-box;
-    font-family: 'Kumbh Sans', sans-serif;
+    overflow: hidden;
+    max-width: 1440px;
+    max-height: 720px;
+}
+
+@media screen and (max-width:22.4rem){
+    body{
+        width: 90vw;
+    }
 }
