--- a/src/css/container.css
+++ b/src/css/container.css
@@ -77,22 +77,40 @@ h3:nth-last-child(5) {
     overflow: hidden;
     width: 100%;
     height: 100%;
+    user-select: none;
 }
 
 .bg-top {
-    position: absolute;
+    position: fixed;
     bottom: 43%;
     right: 50%;
 }
 
 .bg-bottom{
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 45%;
 }
+@media screen and (max-width:1024px){
 
-@media screen and (max-width:360px){
+    .container-social-information {
+        grid-template: repeat(2,1fr) / 10px repeat(3,1fr) 10px;
+    }
 
+    /* .bg-top {
+    bottom: 65%;
+    }
+
+    .bg-bottom{
+        top:33%;
+    } */
+}
+
+
+@media screen and (max-width:375px){
+    .container {
+        margin: 10px;
+    }
     .container-social-information {
         grid-template: repeat(2,1fr) / 10px repeat(3,1fr) 10px;
     }
@@ -105,3 +123,12 @@ h3:nth-last-child(5) {
         top:45%;
     }
 }
+
+
+/*  
+
+411 X 823
+768 X 1024
+1024 X 1366
+
+*/
