--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,5 +25,7 @@ body {
 @media screen and (max-width:22.4rem){
     body{
         width: 90vw;
+        min-width: 320px;
+        max-height: 640px;
     }
 }
