--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,6 +18,6 @@ body {
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    max-width: 1440px;
-    min-width: 320px;
+    max-width: 1440px;/* 
+    min-width: 320px; */
 }
